tf/argocd/argo-cd/k8s/argo-cd/custom-tools.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      volumes:
      - name: custom-tools
        emptyDir: {}
%{ if contains(custom_tools, "kustomize_3_2_0") ~}
      containers:
      - name: argocd-repo-server
        volumeMounts:
        - mountPath: /usr/local/bin/kustomize_3_2_0
          name: custom-tools
          subPath: kustomize_3_2_0
%{ endif ~}
