tf/argocd/argo-cd/k8s/argo-cd/deployment-argocd-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
  template:
    spec:
      containers:
      - name: argocd-server
        resources:
          limits:
            cpu: ${resources.argocd_server.limits.cpu}
            memory: ${resources.argocd_server.limits.memory}
          requests:
            cpu: ${resources.argocd_server.requests.cpu}
            memory: ${resources.argocd_server.requests.memory}
