tf/argocd/argo-cd/k8s/argo-cd/deployment-dex.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-dex-server
spec:
  template:
    spec:
      containers:
      - name: dex
        resources:
          limits:
            cpu: ${resources.dex.limits.cpu}
            memory: ${resources.dex.limits.memory}
          requests:
            cpu: ${resources.dex.requests.cpu}
            memory: ${resources.dex.requests.memory}
