tf/argocd/argo-cd/k8s/argo-cd/deployment-repo-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      containers:
      - name: argocd-repo-server
        resources:
          limits:
            cpu: ${resources.repo_server.limits.cpu}
            memory: ${resources.repo_server.limits.memory}
          requests:
            cpu: ${resources.repo_server.requests.cpu}
            memory: ${resources.repo_server.requests.memory}
