tf/argocd/argo-cd/k8s/argo-cd/statefulset-controller.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: argocd-application-controller
spec:
  template:
    spec:
      containers:
      - name: argocd-application-controller
        resources:
          limits:
            cpu: ${resources.controller.limits.cpu}
            memory: ${resources.controller.limits.memory}
          requests:
            cpu: ${resources.controller.requests.cpu}
            memory: ${resources.controller.requests.memory}
